--- a/templates/base.html
+++ b/templates/base.html
@@ -19,6 +19,8 @@
       <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
     <!-- Project specific CSS -->
+    <link href="{% static 'css/general.css' %}" rel="stylesheet">
+    <link href="{% static 'css/social-icons.css' %}" rel="stylesheet">
 
 </head>
 
