--- a/templates/header.html
+++ b/templates/header.html
@@ -1,5 +1,64 @@
 {% load static %}
 
-<img src="{% static 'images/collector_title.png' %}" alt="collector_title" style="max-height: 50px">
+
+<div id="header-logo-container" class="row">
+
+    <div class="col-lg-4"></div>
+    <div class="col-lg-4">
+        <img id="header-logo" src="{% static 'images/collector_title.png' %}" alt="collector_title">
+    </div>
+    <div class="col-lg-4">
+        <div class="social">
+            <i id="twitter" class="fa fa-twitter fa-2x" aria-hidden="true"></i>
+            <i id="facebook" class="fa fa-facebook-square fa-2x" aria-hidden="true"></i>
+            <i id="plus" class="fa fa-google-plus fa-2x" aria-hidden="true"></i>
+            <i id="instagram" class="fa fa-instagram fa-2x" aria-hidden="true"></i>
+            <i id="pinterest" class="fa fa-pinterest fa-2x" aria-hidden="true"></i>
+        </div>
+    </div>
+</div>
+
+
+<nav class="navbar navbar-default">
+    <div class="container-fluid">
+        <!-- Brand and toggle get grouped for better mobile display -->
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
+                    data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="#">
+                <img alt="Brand" src="{% static 'images/book-thumb.png' %}" class="navbar-brand-thumb">
+            </a>
+        </div>
+
+        <!-- Collect the nav links, forms, and other content for toggling -->
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <ul class="nav navbar-nav">
+                <li class="active"><a href="#">Gallery <span class="sr-only">(current)</span></a></li>
+                <li><a href="#">Comunity</a></li>
+            </ul>
+
+            <ul class="nav navbar-nav navbar-right">
+                <li><a href="#">Backoffice</a></li>
+                <li class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
+                       aria-expanded="false">Login<span class="caret"></span></a>
+                    <ul class="dropdown-menu">
+                        <li><a href="#">Action</a></li>
+                        <li><a href="#">Another action</a></li>
+                        <li><a href="#">Something else here</a></li>
+                        <li role="separator" class="divider"></li>
+                        <li><a href="#">Separated link</a></li>
+                    </ul>
+                </li>
+            </ul>
+        </div><!-- /.navbar-collapse -->
+    </div><!-- /.container-fluid -->
+</nav>
+
 
 
