--- a/static/css/general.css
+++ b/static/css/general.css
@@ -9,10 +9,9 @@
     margin: auto;
 }
 
-.navbar-brand-thumb{
+.navbar-brand-thumb {
     max-width: 25px;
 }
-
 
 /*--------------------    LOGIN      ---------------*/
 
@@ -76,4 +75,17 @@
         background-color: inherit;
         border-top: 0 none;
     }
+}
+
+/*---------------  CUSTOM NAVBAR BUTTONS  -------------------*/
+
+ul.nav > li:hover {
+    background-color: #4484CE !important;
+}
+
+ul.nav > li:hover > a {
+    padding-top: 5px !important;
+    background-color: #e7e7e7 !important;
+    height: 40px;
+    margin-top: 10px;
 }
