--- a/templates/header.html
+++ b/templates/header.html
@@ -1,7 +1,7 @@
 {% load static %}
 
 
-<div id="header-logo-container" class="row">
+<div id="header-logo-container" class="row" >
 
     <div class="col-lg-4"></div>
     <div class="col-lg-4">
@@ -39,7 +39,7 @@
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav">
                 <li class="active"><a href="#">Gallery <span class="sr-only">(current)</span></a></li>
-                <li><a href="#">Comunity</a></li>
+                <li><a href="#">Community</a></li>
             </ul>
 
             <ul class="nav navbar-nav navbar-right">
@@ -96,6 +96,7 @@
         </div><!-- /.navbar-collapse -->
     </div><!-- /.container-fluid -->
 </nav>
+
 
 
 
