--- a/templates/catalog/index.html
+++ b/templates/catalog/index.html
@@ -3,6 +3,71 @@
 
 {% block content %}
 
-    <h5> Catalog index </h5>
+    <div class="row">
+
+        <div id="item-list-container" class="col-md-12">
+            <div class="">
+                <div class="well well-sm">
+                    <div class="form-inline">
+                        <div class="form-group">
+                            <div class="btn-group">
+                                <a href="#" id="grid" class="btn btn-default btn-sm">
+                                    <span class="glyphicon glyphicon-th"></span>
+                                    Grilla
+                                </a>
+                                <a href="#" id="list" class="btn btn-default btn-sm">
+                                    <span class="glyphicon glyphicon-th-list"></span>
+                                    Lista
+                                </a>
+                                <a href="#" id="filters" class="btn btn-default btn-sm">
+                                    <span class="glyphicon glyphicon-filter"></span>
+                                    Filtros
+                                </a>
+                            </div>
+                        </div>
+
+                        <div class="form-group">
+                            <div class="input-group" style="width: 400px;">
+                                <input id="item-search-input" type="text" class="form-control"/>
+                                <span class="input-group-addon">
+                                <i class="fa fa-search"></i>
+                                </span>
+
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+                <div id="products" class="row list-group">
+
+                    {% include "item_list.html" %}
+
+                </div>
+            </div>
+
+
+        </div>
+
+    </div>
+
+
+
+    <script type="text/javascript">
+
+        $(document).ready(function () {
+            $('#list').click(function (event) {
+                event.preventDefault();
+                $('#products .item').addClass('list-group-item');
+            });
+
+            $('#grid').click(function (event) {
+                event.preventDefault();
+                $('#products .item').removeClass('list-group-item');
+                $('#products .item').addClass('grid-group-item');
+            });
+        });
+
+    </script>
+
 
 {% endblock %}
