added products stylesheet

--- a/templates/base.html
+++ b/templates/base.html
@@ -20,6 +20,8 @@
     <![endif]-->
     <!-- Project specific CSS -->
     <link href="{% static 'css/general.css' %}" rel="stylesheet">
+    <link href="{% static 'css/catalog.css' %}" rel="stylesheet">
+
     <link href="{% static 'css/social-icons.css' %}" rel="stylesheet">
 
 </head>
