--- a/templates/base.html
+++ b/templates/base.html
@@ -41,6 +41,7 @@
 <script src="{% static 'js/bootstrap.min.js' %}"></script>
 <script src="{% static 'js/jquery-ui.min.js' %}"></script>
 <!-- project specific Javascript -->
+<script src="{% static 'js/catalog.js' %}"></script>
 
 </body>
 </html>
