--- a/templates/catalog/item_list.html
+++ b/templates/catalog/item_list.html
@@ -4,7 +4,7 @@
 {% for item in items %}
     <div class="item  col-xs-3 col-lg-3">
         <div class="thumbnail">
-            <img class="group list-group-image" src="{{ item.thumbnail.url }}" alt=""/>
+            <img class="group list-group-image item-image" src="{{ item.thumbnail.url }}" alt=""/>
             <div class="caption">
                 <h4 class="group inner list-group-item-heading">
                     {{ item.name }}
@@ -25,7 +25,7 @@
         <ul class="pagination pagination-lg">
             {% if page_obj.has_previous %}
                 <li>
-                    <a href="/store/?search_term={{ search_term }}&page={{ page_obj.previous_page_number }}"
+                    <a href="/catalog/?search_term={{ search_term }}&page={{ page_obj.previous_page_number }}"
                        aria-label="Previous">
                         <span aria-hidden="true">&laquo;</span>
                     </a>
@@ -34,13 +34,13 @@
 
             {% for i in range %}
                 <li>
-                    <a href="/store/?search_term={{ search_term }}&page={{ forloop.counter }}">{{ forloop.counter }}</a>
+                    <a href="/catalog/?search_term={{ search_term }}&page={{ forloop.counter }}">{{ forloop.counter }}</a>
                 </li>
             {% endfor %}
 
             {% if page_obj.has_next %}
                 <li>
-                    <a href="/store/?search_term={{ search_term }}&page={{ page_obj.next_page_number }}"
+                    <a href="/catalog/?search_term={{ search_term }}&page={{ page_obj.next_page_number }}"
                        aria-label="Next">
                         <span aria-hidden="true">&raquo;</span>
                     </a>
