added create item directly from the catalog

--- a/templates/catalog/index.html
+++ b/templates/catalog/index.html
@@ -13,15 +13,15 @@
                             <div class="btn-group">
                                 <a href="#" id="grid" class="btn btn-default btn-sm">
                                     <span class="glyphicon glyphicon-th"></span>
-                                    Grilla
+                                    Grid
                                 </a>
                                 <a href="#" id="list" class="btn btn-default btn-sm">
                                     <span class="glyphicon glyphicon-th-list"></span>
-                                    Lista
+                                    List
                                 </a>
                                 <a href="#" id="filters" class="btn btn-default btn-sm">
                                     <span class="glyphicon glyphicon-filter"></span>
-                                    Filtros
+                                    Filters
                                 </a>
                             </div>
                         </div>
@@ -32,10 +32,16 @@
                                 <span class="input-group-addon">
                                 <i class="fa fa-search"></i>
                                 </span>
-
                             </div>
-
                         </div>
+
+                        <div class="form-group pull-right">
+                            <a href="/catalog/createitem" id="grid" class="btn btn-default btn-sm">
+                                <span class="glyphicon glyphicon-plus"></span>
+                                Add
+                            </a>
+                        </div>
+
                     </div>
                 </div>
                 <div id="products" class="row list-group">
