[BUG FIX] Book description was too large when listed, croped it to 120 chars

--- a/templates/catalog/item_list.html
+++ b/templates/catalog/item_list.html
@@ -1,4 +1,3 @@
-
 {% load static %}
 
 {% for item in items %}
@@ -10,7 +9,7 @@
                     <a href="/catalog/itemdetails/{{ item.pk }}">{{ item.name }}</a>
                 </h4>
                 <p class="group inner list-group-item-text">
-                    {{ item.description }}</p>
+                    {{ item.description | truncatechars:120 }}</p>
                 <p class="group inner list-group-item-text">
                     ISBN: {{ item.isbn }}</p>
             </div>
