--- a/templates/header.html
+++ b/templates/header.html
@@ -38,8 +38,9 @@
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav">
-                <li class="active"><a href="#">Gallery <span class="sr-only">(current)</span></a></li>
+                <li class="active"><a href="{% url 'index' %}">Gallery <span class="sr-only">(current)</span></a></li>
                 <li><a href="#">Community</a></li>
+                <li><a href={% url 'contact' %}>Contact</a></li>
             </ul>
 
             <ul class="nav navbar-nav navbar-right">
