Finished create, update and delete of items

--- a/templates/catalog/edit_item.html
+++ b/templates/catalog/edit_item.html
@@ -8,7 +8,7 @@
     <div class="container col-lg-5">
         <h4>Add item</h4>
         <hr>
-        <form action="/catalog/createitem/" method="post" class="form-horizontal">
+        <form method="post" class="form-horizontal">
             {% csrf_token %}
 
             <div class="form-group">
