--- a/templates/catalog/item_details.html
+++ b/templates/catalog/item_details.html
@@ -5,7 +5,8 @@
 
     <div class="row">
         <div class="col-lg-4">
-            <img class="group list-group-image" src="{{ object.image_url|default_if_none:"/media/book_images/no_image.png" }}" alt=""/>
+            <img class="group list-group-image"
+                 src="{{ object.image_url|default_if_none:"/media/book_images/no_image.png" }}" alt=""/>
             <ul class="list-inline thumbnail-gallery">
                 {% for image in images %}
                     <li>
@@ -16,12 +17,23 @@
         </div>
 
         <div class="col-lg-8">
+
+                <a class="btn btn-default" href="{% url 'edit_item' pk=object.pk %}"><span
+                        class="glyphicon glyphicon-pencil"></span></a>
+
+                <form action="{% url 'remove_item' pk=object.pk %}" method="post" style="display: inline">
+                    {% csrf_token %}
+                    <button type="submit" class="btn btn-default">
+                        <span class="glyphicon glyphicon-trash"></span>
+                    </button>
+                </form>
+
             <h4>{{ object.name }}</h4>
             <p class="lead">{{ item.currency.symbol }} {{ item.price }}</p>
             <h5>{{ object.description }}</h5>
             <hr>
             <p>ISBN: {{ object.isbn }}</p>
-            <p>Date aquired: {{ object.date_aquired | date:"F j, Y"}}</p>
+            <p>Date aquired: {{ object.date_aquired | date:"F j, Y" }}</p>
             <p>Price: {{ object.currency.symbol }} {{ object.price }}</p>
             <p>Quantity: {{ object.quantity }}</p>
             <p>Category: {{ object.category.name }}</p>
