Fixed stylesheet bug in catalog, now all the books have the same height

--- a/static/css/catalog.css
+++ b/static/css/catalog.css
@@ -11,6 +11,8 @@
     -webkit-border-radius: 0px;
     -moz-border-radius: 0px;
     border-radius: 0px;
+    height: 345px;
+    max-height: 354px;
 }
 
 .thumbnail > img {
