--- a/templates/base.html
+++ b/templates/base.html
@@ -24,11 +24,115 @@
 
     <link href="{% static 'css/social-icons.css' %}" rel="stylesheet">
 
+    {% load static %}
 </head>
 
 <body>
 <header>
-    {% include "header.html" %}
+<div id="header-logo-container" class="row">
+    <div class="col-lg-4"></div>
+    <div class="col-lg-4">
+        <a href="{% url 'index' %}">
+            <img id="header-logo" src="{% static 'images/collector_title.png' %}" alt="collector_title">
+        </a>
+    </div>
+    <div class="col-lg-4">
+        <div class="social">
+            <i id="twitter" class="fa fa-twitter fa-2x" aria-hidden="true"></i>
+            <i id="facebook" class="fa fa-facebook-square fa-2x" aria-hidden="true"></i>
+            <i id="plus" class="fa fa-google-plus fa-2x" aria-hidden="true"></i>
+            <i id="instagram" class="fa fa-instagram fa-2x" aria-hidden="true"></i>
+            <i id="pinterest" class="fa fa-pinterest fa-2x" aria-hidden="true"></i>
+        </div>
+    </div>
+</div>
+
+
+<nav class="navbar navbar-default">
+    <div class="container-fluid">
+        <!-- Brand and toggle get grouped for better mobile display -->
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
+                    data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="#">
+                <img alt="Brand" src="{% static 'images/book-thumb.png' %}" class="navbar-brand-thumb">
+            </a>
+        </div>
+
+        <!-- Collect the nav links, forms, and other content for toggling -->
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <ul class="nav navbar-nav">
+                <li class="{% block home_active %}{% endblock %}">
+                    <a href="{% url 'index' %}">Gallery <span class="sr-only">(current)</span></a>
+                </li>
+                <li class="{% block community_active %}{% endblock %}">
+                    <a href="#">Community</a>
+                </li>
+                <li class="{% block contact_active %}{% endblock %}">
+                    <a href={% url 'contact' %}>Contact</a>
+                </li>
+            </ul>
+
+            <ul class="nav navbar-nav navbar-right">
+                <li><a href="#">Backoffice</a></li>
+                <li class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
+                       aria-expanded="false">Login<span class="caret"></span></a>
+                    <ul id="login-dp" class="dropdown-menu">
+                        <li>
+                            <div class="row">
+                                <div class="col-md-12">
+                                    Login via
+                                    <div class="social-buttons">
+                                        <a href="#" class="btn btn-fb"><i class="fa fa-facebook"></i>
+                                            Facebook</a>
+                                        <a href="#" class="btn btn-gp"><i class="fa fa-google-plus"></i> Google</a>
+                                    </div>
+                                    or
+                                    <form class="form" role="form" method="post" action="login"
+                                          accept-charset="UTF-8" id="login-nav">
+                                        <div class="form-group">
+                                            <label class="sr-only" for="exampleInputEmail2">Email
+                                                address</label>
+                                            <input type="email" class="form-control" id="exampleInputEmail2"
+                                                   placeholder="Email address" required>
+                                        </div>
+                                        <div class="form-group">
+                                            <label class="sr-only" for="exampleInputPassword2">Password</label>
+                                            <input type="password" class="form-control"
+                                                   id="exampleInputPassword2" placeholder="Password" required>
+                                            <div class="help-block text-right"><a href="">Forget the password
+                                                ?</a></div>
+                                        </div>
+                                        <div class="form-group">
+                                            <button type="submit" class="btn btn-primary btn-block">Sign in
+                                            </button>
+                                        </div>
+                                        <div class="checkbox">
+                                            <label>
+                                                <input type="checkbox"> keep me logged-in
+                                            </label>
+                                        </div>
+                                    </form>
+                                </div>
+                                <div class="bottom text-center">
+                                    New here ? <a href="#"><b>Join Us</b></a>
+                                </div>
+                            </div>
+                        </li>
+                    </ul>
+
+                </li>
+            </ul>
+        </div>
+    </div>
+</nav>
+
 </header>
 
 <div id="content">
