--- a/templates/catalog/index.html
+++ b/templates/catalog/index.html
@@ -1,6 +1,8 @@
 {% extends 'base.html' %}
 {% load static %}
 
+{% block home_active %}active{% endblock %}
+
 {% block content %}
 
     <div class="row">
