--- a/templates/contact.html
+++ b/templates/contact.html
@@ -1,5 +1,7 @@
 {% extends 'base.html' %}
 
+{% block contact_active %}active{% endblock %}
+
 {% block content %}
         <div class="row margin-bottom-30">
             <div class="col-md-9 mb-margin-bottom-30">
