--- a/templates/authentication/login.html
+++ b/templates/authentication/login.html
@@ -1,38 +1,60 @@
 {% extends "base.html" %}
 
+{% load boostrap_tags %}
+
 {% block content %}
 
-{% if form.errors %}
-<p>Your username and password didn't match. Please try again.</p>
-{% endif %}
-
-{% if next %}
-    {% if user.is_authenticated %}
-    <p>Your account doesn't have access to this page. To proceed,
-    please login with an account that has access.</p>
-    {% else %}
-    <p>Please login to see this page.</p>
+    {% if form.errors %}
+        <p>Your username and password didn't match. Please try again.</p>
     {% endif %}
-{% endif %}
 
-<form method="post" action="{% url 'login' %}">
-{% csrf_token %}
-<table>
-<tr>
-    <td>{{ form.username.label_tag }}</td>
-    <td>{{ form.username }}</td>
-</tr>
-<tr>
-    <td>{{ form.password.label_tag }}</td>
-    <td>{{ form.password }}</td>
-</tr>
-</table>
+    {% if next %}
+        {% if user.is_authenticated %}
+            <p>Your account doesn't have access to this page. To proceed,
+                please login with an account that has access.</p>
+        {% else %}
+            <p>Please login to see this page.</p>
+        {% endif %}
+    {% endif %}
 
-<input type="submit" value="login" />
-<input type="hidden" name="next" value="{{ next }}" />
-</form>
 
-{# Assumes you setup the password_reset view in your URLconf #}
-<p><a href="{% url 'password_reset' %}">Lost password?</a></p>
+    <div class="container col-lg-5">
+        <h4>Login</h4>
+        <hr>
+        <form method="post" action="{% url 'login' %}" class="form-horizontal">
+            {% csrf_token %}
+
+            <div class="form-group">
+                <label for='name' class="col-sm-2">{{ form.username.label_tag }} </label>
+                <div class="col-sm-10">
+                    {{ form.username | addcss:"form-control" }}
+                </div>
+
+            </div>
+
+            <div class="form-group">
+                <label for='name' class="col-sm-2">{{ form.password.label_tag }} </label>
+                <div class="col-sm-10">
+                    {{ form.password | addcss:"form-control" }}
+                </div>
+
+            </div>
+
+            <div class="form-group">
+                <div class="col-sm-12">
+                    <button type="submit" class="btn btn-info pull-right">Login</button>
+                    <input type="hidden" name="next" value="{{ next }}"/>
+                </div>
+            </div>
+        </form>
+
+        {# Assumes you setup the password_reset view in your URLconf #}
+        <p><a href="{% url 'password_reset' %}">Lost password?</a></p>
+
+    </div>
+
+
+
+
 
 {% endblock %}
