--- a/templates/base.html
+++ b/templates/base.html
@@ -21,6 +21,7 @@
     <!-- Project specific CSS -->
     <link href="{% static 'css/general.css' %}" rel="stylesheet">
     <link href="{% static 'css/catalog.css' %}" rel="stylesheet">
+    <link href="{% static 'css/authentication.css' %}" rel="stylesheet">
 
     <link href="{% static 'css/social-icons.css' %}" rel="stylesheet">
 
