--- a/templates/authentication/login.html
+++ b/templates/authentication/login.html
@@ -52,11 +52,13 @@
             <div class="form-group">
                 <div class="col-sm-12">
                     <button type="submit" class="btn btn-info pull-right">Login</button>
+                    <input type="hidden" name="next" value="{{ next }}" />
                 </div>
             </div>
         </form>
 
         <p><a href="{% url 'password_reset' %}">Lost password?</a></p>
+
 
     </div>
 
