Fixed password reset (incorrect routing)

--- a/templates/authentication/password_reset_enter_new.html
+++ b/templates/authentication/password_reset_enter_new.html
@@ -1,8 +1,9 @@
 {% extends 'base.html' %}
 
+{% load boostrap_tags %}
+
 {% block content %}
 
-    <!-- code for displaying success or error message in template -->
     {% if messages %}
         <ul class="messages">
             {% for message in messages %}
@@ -11,14 +12,36 @@
         </ul>
     {% endif %}
 
-    <!-- Form rendering code for template -->
-    <form action="" method="post">
 
-        {% csrf_token %}
-        {{ form.as_p }}
+    <div class="container col-lg-3">
 
-        <input type="submit" value="Submit"/>
-    </form>
+        <form method="post" class="form-horizontal">
+
+            {% csrf_token %}
+            <div class="form-group">
+                <div class="col-sm-12">
+                    <label>{{ form.new_password.label_tag }} </label>
+                    {{ form.new_password | addcss:"form-control" }}
+                </div>
+            </div>
+
+             <div class="form-group">
+                <div class="col-sm-12">
+                    <label>{{ form.confirm_new_password.label_tag }} </label>
+                    {{ form.confirm_new_password | addcss:"form-control" }}
+                </div>
+            </div>
+
+            <div class="form-group">
+                <div class="col-sm-12">
+                    <button type="submit" class="btn btn-info pull-right">Change password</button>
+                </div>
+            </div>
+        </form>
+
+    </div>
+
+
 
 
 {% endblock %}
