--- a/templates/authentication/login.html
+++ b/templates/authentication/login.html
@@ -7,7 +7,7 @@
 
     <!-- Login form -->
     <div class="container col-lg-3 col-lg-offset-1">
-        <h4>Login</h4>
+        <h4 class="text-center">Login</h4>
         <hr>
 
         <div class="social-buttons" style="height: 35px">
@@ -38,7 +38,7 @@
 
             <div class="form-group">
                 <div class="col-sm-12">
-                    <button type="submit" class="btn btn-info pull-right">Login</button>
+                    <button type="submit" class="btn btn-info pull-right btn-block">Login</button>
                     <input type="hidden" name="next" value="{{ next }}"/>
                 </div>
             </div>
@@ -63,40 +63,40 @@
     </div>
 
     <!-- Create user form -->
-    <div class="container col-lg-5 col-lg-offset-2">
-        <h4>Sign up</h4>
+    <div class="container col-lg-4 col-lg-offset-2">
+        <h4 class="text-center">Sign up</h4>
         <hr>
 
         <form method="post" action="{% url 'register' %}" class="form-horizontal">
             {% csrf_token %}
 
             <div class="form-group">
-                <div class="col-sm-10">
+                <div class="col-sm-12">
                     <label for=''> {{ signup_form.email.label }} </label>
                     {{ signup_form.email | addcss:"form-control" }}
                 </div>
             </div>
 
             <div class="form-group">
-                <div class="col-sm-5">
+                <div class="col-sm-6">
                     <label for=''> {{ signup_form.first_name.label }} </label>
-                    {{ signup_form.first_name | addcss:"form-control" }}
+                    {{signup_form.first_name|addcss:"form-control"}}
                 </div>
-                <div class="col-sm-5">
+                <div class="col-sm-6">
                     <label for=''> {{ signup_form.last_name.label }} </label>
                     {{ signup_form.last_name | addcss:"form-control" }}
                 </div>
             </div>
 
             <div class="form-group">
-                <div class="col-sm-10">
+                <div class="col-sm-12">
                     <label for=''> {{ signup_form.password.label }} </label>
                     {{ signup_form.password | addcss:"form-control" }}
                 </div>
             </div>
 
             <div class="form-group">
-                <div class="col-sm-10">
+                <div class="col-sm-12">
                     <label for=''> {{ signup_form.confirm_password.label }} </label>
                     {{ signup_form.confirm_password | addcss:"form-control" }}
                 </div>
@@ -104,8 +104,8 @@
 
 
             <div class="form-group">
-                <div class="col-sm-10">
-                    <button type="submit" class="btn btn-info pull-right">Sign up!</button>
+                <div class="col-sm-12">
+                    <button type="submit" class="btn btn-info btn-block pull-right">Sign up!</button>
                 </div>
             </div>
 
