--- a/templates/contact.html
+++ b/templates/contact.html
@@ -2,53 +2,56 @@
 
 {% block contact_active %}active{% endblock %}
 
+{% load boostrap_tags %}
+
 {% block content %}
-        <div class="row margin-bottom-30">
-            <div class="col-md-9 mb-margin-bottom-30">
-                <div class="headline"><h3>Send us a message!</h3></div>
-                <p>If you had any question, suggestion or want to help us develop a better app, please contact us!.</p>
-                <form action="{% url 'contact' %}" method="post">
-                    {% csrf_token %}
-                    <fieldset class="no-padding">
-                        <div id="contact_name"
-                             class="row sky-space-20 {% if contact_form.name.errors %}has-errors{% endif %}">
-                            <label for="contact_name "
-                                   class="control-label">{{ contact_form.name.errors.as_text }}</label>
-                            <div class="col-md-7 col-md-offset-0">
-                                {{ contact_form.name }}
-                            </div>
-                        </div>
+    <div class="container row margin-bottom-30">
+        <div class="col-md-12 mb-margin-bottom-30">
+            <div class="headline"><h3>Send us a message!</h3></div>
+            <p>If you had any question, suggestion or want to help us develop a better app, please contact us!.</p>
+            <form action="{% url 'contact' %}" method="post" class="form-horizontal">
+                {% csrf_token %}
 
-                        <div id="contact_email"
-                             class="row sky-space-20 {% if contact_form.email.errors %}has-errors{% endif %}">
-                            <label for="contact_email "
-                                   class="control-label">{{ contact_form.email.errors.as_text }}</label>
-                            <div class="col-md-7 col-md-offset-0">
-                                {{ contact_form.email }}
-                            </div>
-                        </div>
+                <div id="contact_name"
+                     class="form-group {% if contact_form.name.errors %}has-errors{% endif %}">
+                    <label for="contact_name "
+                           class="control-label">{{ contact_form.name.errors.as_text }}</label>
+                    <div class="col-sm-6">
+                        {{ contact_form.name|addcss:"form-control" }}
+                    </div>
+                </div>
 
-                        <div id="contact_message"
-                             class="row sky-space-20 {% if contact_form.message.errors %}has-errors{% endif %}">
-                            <label for="contact_message "
-                                   class="control-label">{{ contact_form.message.errors.as_text }}</label>
-                            <div class="col-md-11 col-md-offset-0">
-                                {{ contact_form.message }}
-                            </div>
-                        </div>
+                <div id="contact_email"
+                     class="form-group {% if contact_form.email.errors %}has-errors{% endif %}">
+                    <label for="contact_email "
+                           class="control-label">{{ contact_form.email.errors.as_text }}</label>
+                    <div class="col-md-6">
+                        {{ contact_form.email | addcss:"form-control" }}
+                    </div>
+                </div>
 
-                        <p>
-                            <input type="submit" class="btn-u" value="Send">
-                        </p>
-                    </fieldset>
+                <div id="contact_message"
+                     class="form-group {% if contact_form.message.errors %}has-errors{% endif %}">
+                    <label for="contact_message "
+                           class="control-label">{{ contact_form.message.errors.as_text }}</label>
+                    <div class="col-md-8">
+                        {{ contact_form.message | addcss:"form-control" }}
+                    </div>
+                </div>
 
-                    {% if result_message %}
-                        <div class="message">
-                            <i class="rounded-x fa fa-check"></i>
-                            <p>{{ result_message }}</p>
-                        </div>
-                    {% endif %}
-                </form>
-            </div>
+                <div class="form-group">
+                    <div class="col-sm-8">
+                        <input type="submit" class="btn btn-info pull-right" value="Send">
+                    </div>
+                </div>
+
+                {% if result_message %}
+                    <div class="message">
+                        <i class="rounded-x fa fa-check"></i>
+                        <p>{{ result_message }}</p>
+                    </div>
+                {% endif %}
+            </form>
         </div>
+    </div>
 {% endblock %}
