--- a/templates/base.html
+++ b/templates/base.html
@@ -34,7 +34,7 @@
         <div class="col-lg-4"></div>
         <div class="col-lg-4">
             <a href="{% url 'index' %}">
-                <img id="header-logo" src="{% static 'images/collector_title.png' %}" alt="collector_title">
+                <img id="header-logo" src="{% static 'images/collector-title2.png' %}" alt="collector_title">
             </a>
         </div>
         <div class="col-lg-4">
