--- a/templates/authentication/password_reset.html
+++ b/templates/authentication/password_reset.html
@@ -21,7 +21,7 @@
 
             <div class="form-group">
                 <div class="col-sm-12">
-                    <button type="submit" class="btn btn-info pull-right">Send email!</button>
+                    <button type="submit" class="btn btn-info btn-block pull-right">Send email!</button>
                 </div>
             </div>
         </form>
