Added About Us section to the Contact

--- a/templates/base.html
+++ b/templates/base.html
@@ -25,6 +25,8 @@
 
     <link href="{% static 'css/social-icons.css' %}" rel="stylesheet">
 
+    {% block extra_css %}{% endblock %}
+
     {% load static %}
 </head>
 
