--- a/templates/catalog/edit_item.html
+++ b/templates/catalog/edit_item.html
@@ -12,11 +12,17 @@
             {% csrf_token %}
 
             <div class="form-group">
-                <label for='name' class="col-sm-2"> {{ form.name.label }} </label>
-                <div class="col-sm-10">
+                <label for='name' class="col-sm-12"> {{ form.name.label }} </label>
+                <div class="col-sm-12">
                     {{ form.name | addcss:"form-control" }}
                 </div>
+            </div>
 
+            <div class="form-group">
+                <label for="author" class="col-sm-12"> {{ form.author.label }} </label>
+                <div class="col-sm-12">
+                    {{ form.author | addcss:"form-control" }}
+                </div>
             </div>
 
             <div class="form-group">
