--- a/templates/catalog/item_details.html
+++ b/templates/catalog/item_details.html
@@ -4,7 +4,7 @@
 {% block content %}
 
     <div class="row">
-        <div class="col-lg-4">
+        <div class="col-lg-4 col-xs-12">
             <img class="group list-group-image"
                  src="{{ object.image_url|default_if_none:"/media/book_images/no_image.png" }}" alt=""/>
             <ul class="list-inline thumbnail-gallery">
@@ -16,21 +16,19 @@
             </ul>
         </div>
 
-        <div class="col-lg-8">
-
-                <a class="btn btn-default" href="{% url 'edit_item' pk=object.pk %}"><span
-                        class="glyphicon glyphicon-pencil"></span></a>
-
-                <form action="{% url 'remove_item' pk=object.pk %}" method="post" style="display: inline">
-                    {% csrf_token %}
-                    <button type="submit" class="btn btn-default">
-                        <span class="glyphicon glyphicon-trash"></span>
-                    </button>
-                </form>
-
+        <div class="col-lg-8 col-xs-12">
+            <a class="btn btn-default" href="{% url 'edit_item' pk=object.pk %}"><span
+                    class="glyphicon glyphicon-pencil"></span></a>
+            <form action="{% url 'remove_item' pk=object.pk %}" method="post" style="display: inline">
+                {% csrf_token %}
+                <button type="submit" class="btn btn-default">
+                    <span class="glyphicon glyphicon-trash"></span>
+                </button>
+            </form>
             <h4>{{ object.name }}</h4>
+            <h5>{{ object.author }}</h5>
             <p class="lead">{{ item.currency.symbol }} {{ item.price }}</p>
-            <h5>{{ object.description }}</h5>
+            <p>{{ object.description }}</p>
             <hr>
             <p>ISBN: {{ object.isbn }}</p>
             <p>Date aquired: {{ object.date_aquired | date:"F j, Y" }}</p>
