--- a/templates/catalog/item_details.html
+++ b/templates/catalog/item_details.html
@@ -3,9 +3,10 @@
 
 {% block content %}
 
+
     <div class="row">
-        <div class="col-lg-4">
-            <img class="group list-group-image"
+        <div class="col-lg-3 center-block">
+            <img class="group list-group-image center-block"
                  src="{{ object.image_url|default_if_none:"/media/book_images/no_image.png" }}" alt=""/>
             <ul class="list-inline thumbnail-gallery">
                 {% for image in images %}
@@ -16,17 +17,17 @@
             </ul>
         </div>
 
-        <div class="col-lg-8">
+        <div style="padding: 0 40px 0 40px" class="col-lg-7 center-block">
 
-                <a class="btn btn-default" href="{% url 'edit_item' pk=object.pk %}"><span
-                        class="glyphicon glyphicon-pencil"></span></a>
+            <a class="btn btn-default" href="{% url 'edit_item' pk=object.pk %}"><span
+                    class="glyphicon glyphicon-pencil"></span></a>
 
-                <form action="{% url 'remove_item' pk=object.pk %}" method="post" style="display: inline">
-                    {% csrf_token %}
-                    <button type="submit" class="btn btn-default">
-                        <span class="glyphicon glyphicon-trash"></span>
-                    </button>
-                </form>
+            <form action="{% url 'remove_item' pk=object.pk %}" method="post" style="display: inline">
+                {% csrf_token %}
+                <button type="submit" class="btn btn-default">
+                    <span class="glyphicon glyphicon-trash"></span>
+                </button>
+            </form>
 
             <h4>{{ object.name }}</h4>
             <p class="lead">{{ item.currency.symbol }} {{ item.price }}</p>
