Fixed bugin item detail that broke responsive design when some item image was huge

--- a/static/css/catalog.css
+++ b/static/css/catalog.css
@@ -61,6 +61,11 @@
 
 /* Item Details */
 
+.image-preview {
+    max-height: 400px;
+    max-width: 100%;
+}
+
 .thumbnail-gallery {
     margin-top: 15px;
     text-align: center;
